输出dump以及GC日志文件，便于程序退出原因排查。